--- a/imooc-coupon-service/pom.xml
+++ b/imooc-coupon-service/pom.xml
@@ -10,6 +10,7 @@
   <modules>
     <module>coupon-common</module>
     <module>coupon-template</module>
+    <module>coupon-distribution</module>
   </modules>
 
   <parent>
