--- a/imooc-coupon-service/pom.xml
+++ b/imooc-coupon-service/pom.xml
@@ -11,6 +11,7 @@
     <module>coupon-common</module>
     <module>coupon-template</module>
     <module>coupon-distribution</module>
+      <module>coupon-settlement</module>
   </modules>
 
   <parent>
